# hello-world-operator

./: CHANGELOG.md  Cargo.nix  Cargo.toml  Makefile  README.md  crate-hashes.json  hello-logging.yaml  hello.yaml  nginx.conf
.github/ISSUE_TEMPLATE/: 02-bug_report.yml  bug_report.yml  config.yml  new_version.md
.github/workflows/: nightly-test.yml
.readme/: README.md.j2
.readme/partials/: main.md.j2
deploy/: DO_NOT_EDIT.md
deploy/helm/hello-world-operator/: Chart.yaml  README.md  values.yaml
deploy/helm/hello-world-operator/configs/: properties.yaml
deploy/helm/hello-world-operator/crds/: crds.yaml
deploy/helm/hello-world-operator/templates/: roles.yaml
docker/: Dockerfile
hello-world-app/: .gitignore  Makefile  README.md  pom.xml
hello-world-app/config/: application.properties
hello-world-app/src/main/java/tech/stackable/helloworld/: Application.java  HelloController.java
hello-world-app/src/test/java/tech/stackable/helloworld/: HelloWorldApplicationTests.java
nix/: meta.json
rust/operator-binary/: Cargo.toml
rust/operator-binary/src/: affinity.rs  command.rs  config.rs  controller.rs  crd.rs  discovery.rs  main.rs  product_logging.rs
rust/operator-binary/src/operations/: graceful_shutdown.rs  pdb.rs
scripts/: run-tests
tests/: infrastructure.yaml  release.yaml  test-definition.yaml
tests/templates/kuttl/check-name/: 00-install.yaml  02-assert.yaml  05-assert.yaml  05-install.yaml  10-checks-container.yaml
tests/templates/kuttl/smoke/: 00-install.yaml  10-assert.yaml  10-install.yaml  11-assert.yaml  12-assert.yaml
