[package]
authors = ["Stackable GmbH <info@stackable.de>"]
description = "Stackable Hello World Operator - An example Operator"
edition = "2021"
license = "OSL-3.0"
name = "stackable-hello-world-operator"
repository = "https://github.com/stackabletech/hello-world-operator"
version = "0.0.0-dev"
publish = false

[dependencies]
anyhow = "1.0"
clap = "4.0"
fnv = "1.0"
futures = { version = "0.3", features = ["compat"] }
pin-project = "1.0"
semver = "1.0"
serde = "1.0"
serde_json = "1.0"
snafu = "0.7"
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.44.0" }
strum = { version = "0.24", features = ["derive"] }
tokio = { version = "1.23", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
rstest = "0.17"
serde_yaml = "0.9"

[build-dependencies]
built = { version =  "0.6", features = ["chrono", "git2"] }
stackable-operator = { git = "https://github.com/stackabletech/operator-rs.git", tag = "0.44.0" }
